# ros2-entry-level

./: README.md  docs.drawio
0-setup/: install_ros2_jazzy.sh
docs/: Module1-Hands-on.md  docs.drawio
module1/chatter_app_cpp/: CMakeLists.txt  package.xml
module1/chatter_app_cpp/launch/: chatter_app.launch.py
module1/chatter_app_cpp/src/: listener.cpp  talker.cpp  talker_lambda.cpp
module1/chatter_app_py/: package.xml  setup.cfg  setup.py
module1/chatter_app_py/chatter_app_py/: listener.py  talker.py
module1/chatter_app_py/launch/: chatter_app.launch.py
module1/docs/: docs.drawio
module1/my_first_cpp_pkg/: CMakeLists.txt  package.xml
module1/my_first_cpp_pkg/src/: simple_node.cpp  simple_timer_lambda_node.cpp  simple_timer_node.cpp
module1/my_first_cpp_pkg/src/concepts/bind/: a_no_bind_func.cpp  b_bind_func.cpp  c_no_bind_class.cpp  d_bind_class.cpp
module1/my_first_cpp_pkg/src/concepts/oop/: a_class_base.cpp  b_class_inherit.cpp
module1/my_first_py_pkg/: package.xml  setup.py
module1/template_nodes/: CMakeLists.txt  package.xml
module1/template_nodes/src/: simple_lifecycle_node.cpp
module2/dummybot_description/: CMakeLists.txt  package.xml
module2/dummybot_description/launch/: dummybot_desplay.launch.py  dummybot_display.launch.py  dummybot_urdf_display.launch.py  dummybot_xacro_display.launch.py  robot_description.launch.py
module2/dummybot_description/urdf/: dummybot.gazebo  dummybot.urdf  dummybot.xacro  wheels.xacro
module2/dummybot_gazebo/: CMakeLists.txt  package.xml
module2/dummybot_gazebo/config/: bridge.yaml  dummybot_odom.rviz
module2/dummybot_gazebo/launch/: dummybot_home.launch.py  dummybot_simulation.launch.py  spawn_dummybot.launch.py
module2/dummybot_gazebo/models/simple_building/: model.config  model.sdf
module2/dummybot_gazebo/worlds/: empty_world.world  house.world  simple_building_world.world
module2/robot_kinematics/: CMakeLists.txt  package.xml
module2/robot_kinematics/include/robot_kinematics/: tutlesim_rotation_node.hpp  tutlesim_translation_node.hpp
module2/robot_kinematics/src/: tutlesim_rotation_node.cpp  tutlesim_translation_node.cpp
